--- a/static/webpages/about.html
+++ b/static/webpages/about.html
@@ -46,6 +46,19 @@
         a {
             font-weight: 400;
         }
+        .discord-link {
+            background-color: #7289dacc;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: #ffffff;
+            border: none;
+            border-radius: 8px;
+            padding: 6px 14px;
+            text-decoration: none;
+        }
+        
+        .discord-link:hover {
+            background-color: #7289da;
+        }
     </style>
 </head>
 
@@ -55,7 +68,7 @@
         <ul class="navbar-links" id="navbarLinks">
             <li><a href="../../home-page.html">Home</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="navbar-toggle" onclick="toggleNavbar()">
@@ -66,44 +79,23 @@
     </nav><br><br><br>
 
     <div class="main-content">
-        <h1>Terms and Conditions</h1>
-
-        <p>Welcome to <strong>greencode-discord-server-roles</strong> project repository! These terms and conditions
-            govern the use of this publicly available webpage project hosted on GitHub.</p>
-
-        <h2>1. Ownership and Attribution</h2>
-        <p>This project is made by <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong>. All content in
-            this repository, including HTML, CSS, JavaScript, and other assets, is the intellectual property of
-            <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong> and <strong><a href="https://www.youtube.com/@Green-Code" target="_blank">GreenCode</a></strong>.
-            Unauthorized claims of authorship or ownership are strictly prohibited. If you use or reference this
-            project, you must provide proper attribution, including a visible link back to the repository or the live
-            webpage.</p>
-
-        <h2>2. Permitted Use</h2>
-        <p>You are allowed to view, fork, and modify this project for personal or educational purposes only.
-            Redistribution, commercial use, or hosting a modified version of this webpage without explicit permission is
-            strictly prohibited. You may not use this project to violate any laws or regulations, or infringe the rights
-            of any third-party or any other entity. </p>
-
-        <h2>3. Licensing</h2>
-        <p>This project is licensed under the <strong>MIT License</strong>. Please refer to the LICENSE file in this
-            repository for details. You must comply with all licensing terms if you use this project.</p>
-
-        <h2>4. No Warranty</h2>
-        <p>This project is provided "as-is" without any warranties or guarantees. The author is not responsible for any
-            issues, bugs, or damages resulting from the use or modification of this webpage. You assume all risk and
-            responsibility for any use of this project.</p>
-
-        <h2>5. Changes to Terms</h2>
-        <p>The terms and conditions may be updated at any time. Changes will be reflected in the repository, and
-            continued use of the project signifies your acceptance of the updated terms. You should check the terms and
-            conditions regularly for any updates. Any changes to the terms and conditions will be effective immediately
-            upon posting on the repository.</p>
-
-        <h2>6. Contact</h2>
-        <p>If you have questions, concerns, or would like to request permission for other uses, please reach out via
-            Discord. Feel free to DM the author of this repository. My discord username is <strong>red__code</strong>
+        <h1>About us</h1>
+        <p>This website is made for explaining GreenCode's discord server's roles and their functions. Every role is explained in detail except the Administrator, Moderator, Bots and Green Code (not Green Coder) roles. If you have any doubts regarding any roles or the server itself, then feel free to DM the moderators of the server. We are always there to help you. Just don't spam to us, and we will help you out.</p>
+        <hr>
+        <h1>Rules of the server</h1>
+        <p>
+            <ul>
+                <li><strong>Be respectful: </strong>Please be respectful to everyone in the server. Whether be it a friend you know physically or any stranger whom you don't like. Being disrespectful to others can result in a ban.</li>
+                <li><strong>No spamming: </strong>Please don't spam the same message over and over again in any text channel.</li>
+                <li><strong>No textwalling: </strong>Please don't textwall in general chatting channels. Textwall means to cover a large portion of the page just by a single message.</li>
+                <li><strong>No offensive language: </strong>Please don't use any offensive language/images in the server. Doing this can result in a ban without any warning or a second thought by the moderators/admininstrators.</li>
+                <li><strong>No offensive names/Profile pictures: </strong>Please don't use any offensive names or profile pictures in the server. The staff members will ask you to change your name/profile picture if it is disturbing.</li>
+                <li><strong>No Direct & Indirect Threats: </strong>Threats to other users of DDoS, Death, DoX, abuse, and other malicious threats are absolutely prohibited and disallowed.</li>
+                <li><strong>Follow the Discord community guidelines: </strong>Please follow the discord community guidelines. You can find them <a href="https://discordapp.com/guidelines" target="_blank" rel="noopener noreferrer">here</a>.</li>
+            </ul>
+            Your presence in our server implies accepting these rules, including all further changes. These changes might be done at any time without notice, it is your responsibility to check for them.
         </p>
+        <hr>
     </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer class="footer">
