--- a/static/webpages/contact.html
+++ b/static/webpages/contact.html
@@ -46,6 +46,19 @@
         a {
             font-weight: 400;
         }
+        .discord-link {
+            background-color: #7289dacc;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: #ffffff;
+            border: none;
+            border-radius: 8px;
+            padding: 6px 14px;
+            text-decoration: none;
+        }
+        
+        .discord-link:hover {
+            background-color: #7289da;
+        }
     </style>
 </head>
 
@@ -56,7 +69,7 @@
             <li><a href="../../home-page.html">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="navbar-toggle" onclick="toggleNavbar()">
             <span></span>
@@ -66,44 +79,28 @@
     </nav><br><br><br>
 
     <div class="main-content">
-        <h1>Terms and Conditions</h1>
-
-        <p>Welcome to <strong>greencode-discord-server-roles</strong> project repository! These terms and conditions
-            govern the use of this publicly available webpage project hosted on GitHub.</p>
-
-        <h2>1. Ownership and Attribution</h2>
-        <p>This project is made by <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong>. All content in
-            this repository, including HTML, CSS, JavaScript, and other assets, is the intellectual property of
-            <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong> and <strong><a href="https://www.youtube.com/@Green-Code" target="_blank">GreenCode</a></strong>.
-            Unauthorized claims of authorship or ownership are strictly prohibited. If you use or reference this
-            project, you must provide proper attribution, including a visible link back to the repository or the live
-            webpage.</p>
-
-        <h2>2. Permitted Use</h2>
-        <p>You are allowed to view, fork, and modify this project for personal or educational purposes only.
-            Redistribution, commercial use, or hosting a modified version of this webpage without explicit permission is
-            strictly prohibited. You may not use this project to violate any laws or regulations, or infringe the rights
-            of any third-party or any other entity. </p>
-
-        <h2>3. Licensing</h2>
-        <p>This project is licensed under the <strong>MIT License</strong>. Please refer to the LICENSE file in this
-            repository for details. You must comply with all licensing terms if you use this project.</p>
-
-        <h2>4. No Warranty</h2>
-        <p>This project is provided "as-is" without any warranties or guarantees. The author is not responsible for any
-            issues, bugs, or damages resulting from the use or modification of this webpage. You assume all risk and
-            responsibility for any use of this project.</p>
-
-        <h2>5. Changes to Terms</h2>
-        <p>The terms and conditions may be updated at any time. Changes will be reflected in the repository, and
-            continued use of the project signifies your acceptance of the updated terms. You should check the terms and
-            conditions regularly for any updates. Any changes to the terms and conditions will be effective immediately
-            upon posting on the repository.</p>
-
-        <h2>6. Contact</h2>
-        <p>If you have questions, concerns, or would like to request permission for other uses, please reach out via
-            Discord. Feel free to DM the author of this repository. My discord username is <strong>red__code</strong>
+        <h1>Contact Us</h1>
+        <p>
+            If you have any questions/concerns or suggestions then feel free to contact me or the other moderators through the following methods:
+            <ul>
+                <li>Discord username: red__code</li>
+                <li>Github username: <a href="http://www.github.com/RedCode2" target="_blank" rel="noopener noreferrer">RedCode2</a></li>
+            </ul>
         </p>
+        <hr>
+        <p>Don't just contact me! There are other moderators who can help you with your questions or concerns regarding the server. However, if you have concerns regarding this project itself, then you can contact me.</p>
+        <hr>
+        <p>
+            Want to contact us? Just follow the following rules to message us:
+            <ul>
+                <li>Be polite and respectful to us.</li>
+                <li>Please don't spam the same message over and over again.</li>
+                <li>Just be straight to the point. Don't just make out an entire story just for a short suggestion.</li>
+                <li>Please don't request to be a moderator/admin.</li>
+                <li>Please don't ask for personal information or sensitive information.</li>
+            </ul>
+        </p>
+        <hr>
     </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer class="footer">
