--- a/static/webpages/privacy-policy.html
+++ b/static/webpages/privacy-policy.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions</title>
+    <title>Privacy Policy</title>
 
     <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.navbar/navbar-stylesheet.css">
     <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.footer/footer.css">
@@ -16,12 +15,12 @@
         }
 
         .main-content {
+            font-family: Arial, sans-serif;
             line-height: 1.8;
             padding: 20px;
             max-width: 800px;
             margin: auto;
         }
-
         .navbar {
             /*Navbar should be horizontally centered*/
             display: flex;
@@ -37,18 +36,15 @@
             box-shadow: 0 0px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
         }
-
-        h1,
-        h2 {
+        h1, h2 {
             color: #333;
         }
-
         a {
-            font-weight: 400;
+            color: #007BFF;
+            text-decoration: none;
         }
     </style>
 </head>
-
 <body>
     <nav class="navbar">
         <div class="navbar-logo">🧬</div>
@@ -64,46 +60,38 @@
             <span></span>
         </div>
     </nav><br><br><br>
-
     <div class="main-content">
-        <h1>Terms and Conditions</h1>
+        <h1>Privacy Policy</h1>
 
-        <p>Welcome to <strong>greencode-discord-server-roles</strong> project repository! These terms and conditions
-            govern the use of this publicly available webpage project hosted on GitHub.</p>
+        <p>Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use this repository.</p>
 
-        <h2>1. Ownership and Attribution</h2>
-        <p>This project is made by <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong>. All content in
-            this repository, including HTML, CSS, JavaScript, and other assets, is the intellectual property of
-            <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong> and <strong><a href="https://www.youtube.com/@Green-Code" target="_blank">GreenCode</a></strong>.
-            Unauthorized claims of authorship or ownership are strictly prohibited. If you use or reference this
-            project, you must provide proper attribution, including a visible link back to the repository or the live
-            webpage.</p>
+        <h2>1. Information We Collect</h2>
+        <p>We do not collect personal information unless you explicitly provide it to us, such as through a contact form or other direct communication.</p>
+        <p>Non-personal data such as browser type, device information, and interaction with the webpage may be collected automatically to improve the website’s functionality.</p>
 
-        <h2>2. Permitted Use</h2>
-        <p>You are allowed to view, fork, and modify this project for personal or educational purposes only.
-            Redistribution, commercial use, or hosting a modified version of this webpage without explicit permission is
-            strictly prohibited. You may not use this project to violate any laws or regulations, or infringe the rights
-            of any third-party or any other entity. </p>
+        <h2>2. Use of Information</h2>
+        <p>The information we collect is used to:</p>
+        <ul>
+            <li>Improve the functionality and user experience of the website.</li>
+            <li>Respond to user inquiries or feedback.</li>
+            <li>Analyze website performance and usage trends.</li>
+            <li>Analyze the Professional role test results.</li>
+        </ul>
 
-        <h2>3. Licensing</h2>
-        <p>This project is licensed under the <strong>MIT License</strong>. Please refer to the LICENSE file in this
-            repository for details. You must comply with all licensing terms if you use this project.</p>
+        <h2>3. Third-Party Services</h2>
+        <p>We may use third-party services, such as analytics tools, that collect non-personal data to analyze website performance. These services are governed by their own privacy policies.</p>
 
-        <h2>4. No Warranty</h2>
-        <p>This project is provided "as-is" without any warranties or guarantees. The author is not responsible for any
-            issues, bugs, or damages resulting from the use or modification of this webpage. You assume all risk and
-            responsibility for any use of this project.</p>
+        <h2>4. Data Protection</h2>
+        <p>We are committed to protecting your data. While no method of online data transmission is 100% secure, we implement appropriate measures to safeguard any information you share with us.</p>
 
-        <h2>5. Changes to Terms</h2>
-        <p>The terms and conditions may be updated at any time. Changes will be reflected in the repository, and
-            continued use of the project signifies your acceptance of the updated terms. You should check the terms and
-            conditions regularly for any updates. Any changes to the terms and conditions will be effective immediately
-            upon posting on the repository.</p>
+        <h2>5. Links to External Websites</h2>
+        <p>Our website may include links to third-party websites. We are not responsible for the content or privacy practices of those websites. Please review their privacy policies before sharing any personal information.</p>
 
-        <h2>6. Contact</h2>
-        <p>If you have questions, concerns, or would like to request permission for other uses, please reach out via
-            Discord. Feel free to DM the author of this repository. My discord username is <strong>red__code</strong>
-        </p>
+        <h2>6. Changes to this Privacy Policy</h2>
+        <p>We reserve the right to update this Privacy Policy at any time. Updates will be posted on this page, and continued use of the website constitutes acceptance of the revised policy.</p>
+
+        <h2>7. Contact</h2>
+        <p>If you have any questions or concerns about this Privacy Policy, you can reach out via Discord. My discord username is <strong>red__code</strong></p>
     </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer class="footer">
@@ -183,7 +171,5 @@
     </footer>
 
     <script src="../scripts/footer/footer.js"></script>
-    <script src="../scripts/homepage.config/homepage.config.js"></script>
 </body>
-
 </html>
