--- a/testing.html
+++ b/testing.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="background-img/gradient-futuristic-background-with-spheres/6031991.jpg" alt="image not showing">
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat atque modi earum voluptatem explicabo consequuntur, eius excepturi eaque facere odio dolor optio corrupti adipisci. Deserunt possimus repellat veniam veritatis alias?</p>
 </body>
 </html>
