--- a/static/webpages/roles/server-booster.html
+++ b/static/webpages/roles/server-booster.html
@@ -1,110 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions</title>
+    <title>Server booster role</title>
 
-    <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.navbar/navbar-stylesheet.css">
-    <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.footer/footer.css">
+    <link rel="stylesheet" href="../../stylesheets/roboto-css-classes.css">
+    <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.footer/footer.css">
+    <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.navbar/navbar-stylesheet.css">
+    <link rel="stylesheet" href="../../stylesheets/role-explanation-page-stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
+        .footer {
+            margin-top: 300px;
         }
-
-        .main-content {
-            line-height: 1.8;
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-        }
-
         .navbar {
-            /*Navbar should be horizontally centered*/
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 60px;
-            background-color: #ffffff;
-            border-radius: 0;
-            box-shadow: 0 0px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        h1,
-        h2 {
-            color: #333;
-        }
-
-        a {
-            font-weight: 400;
+            opacity: 0.9;
         }
     </style>
 </head>
-
 <body>
     <nav class="navbar">
         <div class="navbar-logo">🧬</div>
         <ul class="navbar-links" id="navbarLinks">
-            <li><a href="../../home-page.html">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="navbar-toggle" onclick="toggleNavbar()">
             <span></span>
             <span></span>
             <span></span>
         </div>
-    </nav><br><br><br>
+    </nav>
 
-    <div class="main-content">
-        <h1>Terms and Conditions</h1>
-
-        <p>Welcome to <strong>greencode-discord-server-roles</strong> project repository! These terms and conditions
-            govern the use of this publicly available webpage project hosted on GitHub.</p>
-
-        <h2>1. Ownership and Attribution</h2>
-        <p>This project is made by <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong>. All content in
-            this repository, including HTML, CSS, JavaScript, and other assets, is the intellectual property of
-            <strong><a href="https://github.com/RedCode2" target="_blank">RedCode2</a></strong> and <strong><a href="https://www.youtube.com/@Green-Code" target="_blank">GreenCode</a></strong>.
-            Unauthorized claims of authorship or ownership are strictly prohibited. If you use or reference this
-            project, you must provide proper attribution, including a visible link back to the repository or the live
-            webpage.</p>
-
-        <h2>2. Permitted Use</h2>
-        <p>You are allowed to view, fork, and modify this project for personal or educational purposes only.
-            Redistribution, commercial use, or hosting a modified version of this webpage without explicit permission is
-            strictly prohibited. You may not use this project to violate any laws or regulations, or infringe the rights
-            of any third-party or any other entity. </p>
-
-        <h2>3. Licensing</h2>
-        <p>This project is licensed under the <strong>MIT License</strong>. Please refer to the LICENSE file in this
-            repository for details. You must comply with all licensing terms if you use this project.</p>
-
-        <h2>4. No Warranty</h2>
-        <p>This project is provided "as-is" without any warranties or guarantees. The author is not responsible for any
-            issues, bugs, or damages resulting from the use or modification of this webpage. You assume all risk and
-            responsibility for any use of this project.</p>
-
-        <h2>5. Changes to Terms</h2>
-        <p>The terms and conditions may be updated at any time. Changes will be reflected in the repository, and
-            continued use of the project signifies your acceptance of the updated terms. You should check the terms and
-            conditions regularly for any updates. Any changes to the terms and conditions will be effective immediately
-            upon posting on the repository.</p>
-
-        <h2>6. Contact</h2>
-        <p>If you have questions, concerns, or would like to request permission for other uses, please reach out via
-            Discord. Feel free to DM the author of this repository. My discord username is <strong>red__code</strong>
-        </p>
-    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="main-container">
+        <h1>Server booster role</h1>
+        <hr>
+        <p>The Server Booster role is a very special role. You can earn it by boosting the server. When a discord server is boosted, it gives the server a lot of special features. If you want to boost the server, then just click on <a href="https://discord.com/channels/942188181032431698/member-safety" target="_blank">this link</a>. You should automatically get the Server Booster role if you boosted the server. However, if you did not get the Server Booster role, then feel free to DM the admins, not the moderators as the moderators cannot help you with getting the Server Booster role. Just don't spam and we will try our best to help you with getting the role. There is an extremely low chance of not getting the Server Booster role even if you boosted the server. It only happens if discord itself has a glitch. So, no need to worry about it. Feel free to boost the server. If you have any questions regarding the Server Booster role, then feel free to DM the moderators.</p>
+    </div>    
 
     <footer class="footer">
         <div class="footer__parralax">
@@ -162,12 +102,12 @@
                     <nav class="footer__nav">
                         <ul class="footer__nav-list">
                             <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="#" class="footer__nav-link">
+                                <a href="../terms-and-conditions.html" class="footer__nav-link" target="_blank">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Terms & Conditions
                                 </a>
                             </div>
-                            <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="#" class="footer__nav-link">
+                            <div class="footer__nav-item" style="margin-right: 10rem;" target="_blank">
+                                <a href="../privacy-policy.html" class="footer__nav-link">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Privacy
                                 </a>
                             </div>
@@ -181,9 +121,5 @@
             </div>
         </div>
     </footer>
-
-    <script src="../scripts/footer/footer.js"></script>
-    <script src="../scripts/homepage.config/homepage.config.js"></script>
 </body>
-
 </html>
